# ngm

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
python/: {requirements.txt}
python/ngm_cli/: cli.py  progress.py  utils.py
python/ngm_cli/commands/: install.py  list.py  remove.py  search.py  update.py
rust/: {Cargo.toml}
rust/src/: config.rs  dependency_resolver.rs  download_manager.rs  environment_manager.rs  lib.rs  main.rs  package.rs  utils.rs
rust/src/adapters/: apt.rs  mod.rs  npm.rs  pypi.rs
rust/tests/: unit_tests.rs
scripts/: build.sh  release.sh  test.sh
