[package]
name = "ngm-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ngm-package-manager/ngm"
description = "Core functionality for ngm package manager"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
petgraph = "0.20"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

[lib]
name = "ngm_core"
path = "src/lib.rs"